[tool.poetry]
name = "mpsfmachine"
version = "0.1.0"
description = ""
authors = ["Christina Hedges <christina.l.hedges@nasa.gov>"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
psfmachine = "^1.0.0"
jedi = "0.17.2"
tess-cloud = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^3.1.4"
black = "^21.7b0"
mkdocs = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
